--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,3 +3,8 @@
     background-color:red;
     font-size:100px;
 }
+.dwa{
+    font-size:100px;
+    color:red;
+    text-shadow:10px 10px 10px green;
+}
